--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,8 +10,8 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <!-- Add Bootstrap CSS (you can change the version as needed) -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyAq68xfvhNwnzIUnx6K/iRSUewM99+" crossorigin="anonymous" />
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyAq68xfvhNwnzIUnx6K/iRSUewM99+" crossorigin="anonymous" /> -->
 
   <!-- Add your custom stylesheets or styles here -->
   <!-- <link rel="stylesheet" href="%PUBLIC_URL%/your-custom-styles.css" /> -->
@@ -30,14 +30,14 @@
   <div id="root"></div>
 
   <!-- Add Bootstrap JS (you can change the version as needed) for responsive but not working or working i dont know-->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
     integrity="sha384-Xr18I0qF6p2veQc+dU8BmDJsMl0IdTbem5dYl9iJjU0qF8RS5/P/R6bA9orPM0e6"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyAq68xfvhNwnzIUnx6K/iRSUewM99+" crossorigin="anonymous"></script>
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyAq68xfvhNwnzIUnx6K/iRSUewM99+" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
